[package]
name = "vkrender"
version = "0.1.0"
edition = "2021"

[dependencies]
nalgebra = "0.30"
vulkano = "0.29"
vulkano-shaders = "0.29"
vulkano-win = "0.29"
winit = "0.26"
image = "0.24"
bytemuck = "1.8"

protocol = {path = "../protocol"}
xpbd = {path = "../xpbd"}
material = {path = "../material"}
