[package]
name = "vkrender"
version = "0.1.0"
edition = "2021"

[dependencies]
nalgebra = "0.30"
vulkano = "0.30"
vulkano-shaders = "0.30"
vulkano-win = "0.30"
winit = "0.26"
image = "0.24"
bytemuck = "1.11"

protocol = {path = "../protocol"}
xpbd = {path = "../xpbd"}
material = {path = "../material"}
